# pdf_chat

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
chat/: admin.py  models.py  prompts.py  urls.py  views.py
chat/migrations/: 0001_initial.py  0002_remove_project_file_project_slug_and_more.py  0003_enable_vector.py  0004_projectfile_content_embedding.py  0005_remove_projectfile_content_and_more.py  0006_alter_embeddingdata_embedding.py
chat/templates/: chat.html  home.html  project_files.html
config/: settings.py  urls.py  wsgi.py
config/mixins/: models.py
config/utils/: embedding.py
