[project]
name = "chat-pdf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2",
    "langchain>=0.3.23",
    "langchain-community>=0.3.21",
    "langchain-core>=0.3.51",
    "pgvector>=0.4.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.0",
    "pypdf>=3.9.0",
    "google-generativeai>=0.3.2",
    "langchain-google-genai>=0.0.6",
    
]
